About-me arrow in hero-section no longer shown on small mobile-resolutions

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -201,6 +201,12 @@ a.navbar-item:hover {
   height: 25vh;
 }
 
+@media screen and (max-height: 623px) {
+  .scroll-to-arrow {
+    display: none;
+  }
+}
+
 .nav-text {
   color: #e4e4e4;
   position: absolute;
